client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  height: 100vh;
}

.ql-editor {
  font-size: 1.05rem;
}

/* Dark mode */
.flowbite-dark .ql-editor[data-placeholder]::before {
  color: var(--text-color-dark);
}

/* Regular white mode */
.ql-editor[data-placeholder]::before {
  color: var(--text-color-light);
}

.post-content p {
  margin-bottom: 0.5rem;

}

.post-content h1 {
  font-size: 1.5rem;
  font-weight: 600;
  font-family: sans-serif; 
  margin: 1.5rem 0;
}

.post-content h2 {
  font-size: 1.4rem;
  font-family: sans-serif;
  margin: 1.5rem 0;
}




.post-content a {
  color: rgb(73, 149, 199);
  text-decoration: none;
}

.post-content a:hover {
  text-decoration: underline;
}

.dark .post-content a {
  color: red;
}

@keyframes color-change {
  0% { color: #718096; } /* Initial color */
  50% { color: #38a169; } /* New color */
  100% { color: #718096; } /* Back to initial color */
}

.animate-color-change {
  animation: color-change 3s infinite; /* Change 3s to adjust the speed */
}

